--- a/cordel.html
+++ b/cordel.html
@@ -18,6 +18,7 @@
 
     <section class="normal">
         <p>
+            oiiii, estou louca
             Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail <br>
